fixed overflow in media box when liking / sending

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -60,6 +60,11 @@ $grey: #999;
   }
 }
 
+.media-body {
+    overflow:visible;
+    margin-left:80.5px;
+}
+
 
 /* WISDOMS COMPONENTS*/
 .w-logo {
